tests/baselines/reference/jsFileCompilationBindReachabilityErrors(strict=true).errors.txt
a.js(1,14): error TS7006: Parameter 'a' implicitly has an 'any' type.
a.js(1,17): error TS7006: Parameter 'b' implicitly has an 'any' type.
a.js(3,9): error TS7029: Fallthrough case in switch.
a.js(13,12): error TS2454: Variable 'x' is used before being assigned.
a.js(16,5): error TS7027: Unreachable code detected.
a.js(19,1): error TS7028: Unused label.


==== a.js (6 errors) ====
    function foo(a, b) {
                 ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                    ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
        switch (a) {
            case 10:
            ~~~~~~~~
!!! error TS7029: Fallthrough case in switch.
                if (b) {
                    return b;
                }
            case 20:
                return a;
        }
    }
    
    function bar() {
        return x;
               ~
!!! error TS2454: Variable 'x' is used before being assigned.
        function bar2() {
        }
        var x = 10; // error
        ~~~~~~~~~~~
!!! error TS7027: Unreachable code detected.
    }
    
    label1:  var x2 = 10;
    ~~~~~~
!!! error TS7028: Unused label.